# healthcare_pricing_etl_and_analysis

./: Dockerfile  README.md  pyproject.toml
dbt-duckdb/: dbt_project.yml  profiles.yml
dbt-duckdb/models/0_sources/: sources.yml
dbt-duckdb/models/1_staging/: all_plans_and_locations_exploded_raw.sql  schema.yml
dbt-duckdb/models/2_analytics/: ny_anthem_ppo.sql  schema.yml
ingestion/: main.py
raw_data/: ny_location_analysis.txt  ny_plan_id_analysis.txt
