[tool.poetry]
name = "ingestion"
version = "0.0.1"
description = "Healthcare pricing"
authors = ["Athavan"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.2"
duckdb = "^1.2.1"
ijson = "^3.3.0" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
ingestion = "ingestion.main:main"
